--- a/coc-settings.json
+++ b/coc-settings.json
@@ -40,5 +40,6 @@
   "prettier.tabWidth": 2,
   "signature.floatConfig": { "border": true },
   "suggest.floatConfig": { "border": true },
-  "sumneko-lua.enableNvimLuaDev": true
+  "sumneko-lua.enableNvimLuaDev": true,
+  "Lua.telemetry.enable": true
 }
