COC-nvim updates in init.vim

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -14,7 +14,9 @@
     "markdown",
     "python",
     "scss",
-    "typescript"
+    "typescript",
+    "typescriptreact",
+    "yml"
   ],
   "diagnostic.floatConfig": { "border": true },
   "emmet.includeLanguages": { "javascript": "javascriptreact" },
