Removing nvim-lua/popup, changed a nvim tree setting, added color setting to cocConfig

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -18,6 +18,7 @@
     "typescriptreact",
     "yml"
   ],
+  "colors.filetypes": ["*"],
   "diagnostic.floatConfig": { "border": true },
   "emmet.includeLanguages": { "javascript": "javascriptreact", "typescript": "typescriptreact" },
   "git.addedSign.hlGroup": "GitSignsAdd",
