Putting Yanky back

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -28,7 +28,7 @@
         "package.yaml",
         "hie.yaml"
       ],
-      "filetypes": ["haskell", "lhaskell"]
+      "filetypes": ["hs", "lhs", "haskell", "lhaskell"]
     }
   },
   "list.insertMappings": {
