Added setup for python

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -39,6 +39,9 @@
   "notification.timeout": 5000,
   "prettier.disableLanguages": ["haskell"],
   "prettier.tabWidth": 2,
+  "python.formatting.autopep8Path": "/Users/zrizer/.pyenv/shims/autopep8",
+  "pyright.inlayHints.functionReturnTypes": false,
+  "pyright.inlayHints.variableTypes": false,
   "signature.floatConfig": { "border": true, "rounded": true },
   "suggest.floatConfig": { "border": true, "rounded": true },
   "suggest.noselect": true,
