--- a/coc-settings.json
+++ b/coc-settings.json
@@ -28,7 +28,12 @@
         "package.yaml",
         "hie.yaml"
       ],
-      "filetypes": ["hs", "lhs", "haskell", "lhaskell"]
+      "filetypes": ["hs", "lhs", "haskell", "lhaskell"],
+      "settings": {
+        "haskell": {
+          "formattingProvider": "fourmolu"
+        }
+      }
     }
   },
   "list.insertMappings": {
