--- a/coc-settings.json
+++ b/coc-settings.json
@@ -46,9 +46,10 @@
   "notification.timeout": 5000,
   "prettier.disableLanguages": ["haskell"],
   "prettier.tabWidth": 2,
-  "python.formatting.autopep8Path": "/Users/zrizer/.pyenv/shims/autopep8",
   "pyright.inlayHints.functionReturnTypes": false,
   "pyright.inlayHints.variableTypes": false,
+  "python.formatting.blackPath": "/Users/zrizer/.pyenv/shims/black",
+  "python.formatting.provider": "black",
   "signature.floatConfig": { "border": true, "rounded": true },
   "suggest.floatConfig": { "border": true, "rounded": true },
   "suggest.noselect": true,
